Update domain files

--- a/etc/mailscanner/phishing.safe.sites.conf
+++ b/etc/mailscanner/phishing.safe.sites.conf
@@ -1,34 +1,9 @@
-#00
 *.01net.com
-#01 This file contains the list of all the sites which can be safely
-#02 ignored in the "phishing fraud" checks.
-#03 The entries here are 1 per line, and are the full hostnames of
-#04 the *real* destinations of links which would be caught by the checks.
-#05 So if you had HTML that looked like this:
-#06
-#07     Please tell us at <a href="http://email.bank.com/">Bank.com</a>
-#08
-#09 then you should add
-#10     email.bank.com
-#11 to this file.
-#12 You can also use wildcards, so you can list *.bank.com instead of
-#13 listing multiple web servers individually. Use with care.
-#14
-#15 If you have the "Also Find Numeric Phishing" option switched on, you
-#16 might want to add some numeric IP addresses to this file as well, such as
-#17     192.168.2.3
-#18
-#19 You can also add numeric IP addresses of web servers. Host names of web
 204.156.4.220
 207.126.52.38
-#20 servers will be translated into numerical IP addresses.
-#21
 213.144.20.11
 213.144.20.14
 213.144.20.9
-#22 ***** Please send all updates (hosts listed 1 per line please!) to
-#23 ***** phishing@mailscanner.info
-#24
 360.ruk1.net
 aaa.ishayafa.info
 aacrapps.aacr.org
@@ -435,6 +410,7 @@ newsletters.microsoft.com
 newsletters.openmoves.com
 newsletter.yvesrocher.ca
 newsmailer.hilti.biz
+news.national.com
 news.national.com:80
 news.occupationalhazards.com
 news.sonypictures.com
